# 4TH-SEMESTER-CSE

./: .gitattributes  .gitignore  README.md
ENVIRONMENTAL HUMANITIES/: 21CS10016_A1.docx
ENVIRONMENTAL HUMANITIES/Endsem Notes/: Adi Ganga.docx  HUPE.docx  Resilience.docx  SES.docx
ENVIRONMENTAL HUMANITIES/Midsem Notes/: Anthropocene.docx  Capitalocene.docx  Hydrosocial Cycle.docx  Political Ecology of Water.docx  The hydro(sediment)social cycle.docx  The nine planetary boundaries framework.docx  Urban political ecology of air.docx  Urbanocene.docx
SOFTWARE ENGINEERING LABORATORY/: TA_Student_Group_Mapping_for_Assignment_Evaluation.xlsx
SOFTWARE ENGINEERING LABORATORY/21CS10016_A4/: ImageViewerGUI.py
SOFTWARE ENGINEERING LABORATORY/A1/: 21CS10016_A1.cpp  package-lock.json  package.json
SOFTWARE ENGINEERING LABORATORY/A2/: DS_Slides.pptx
SOFTWARE ENGINEERING LABORATORY/A2/Q2/my_package/: pyproject.toml  setup.py
SOFTWARE ENGINEERING LABORATORY/A2/Q2/my_package/data/: __init__.py  download.py
SOFTWARE ENGINEERING LABORATORY/A2/Q2/my_package/data/transforms/: __init__.py  blur.py
SOFTWARE ENGINEERING LABORATORY/A2/Q2/my_package/my_package.egg-info/: PKG-INFO  SOURCES.txt
SOFTWARE ENGINEERING LABORATORY/A3/: makefile  rdb-attr.cpp  rdb-basics.cpp  rdb-join.cpp  rdb-main.cpp  rdb.h
SOFTWARE ENGINEERING LABORATORY/A4/: ImageViewerGUI.py  README.md  TkinterGUI.pptx
SOFTWARE ENGINEERING LABORATORY/Practice_Problem_1/: 21CS10016_PP1.c
SOFTWARE ENGINEERING LABORATORY/T1/: labtest_01_problem_01_21CS10016.cpp  labtest_01_problem_02_21CS10016.cpp
(+153 files in other folders)
